// TIME BLOCK Database Schema (DBML for dbdiagram.io)
// Visit: https://dbdiagram.io/d
// Paste this code to visualize the ERD

Project TIME_BLOCK {
  database_type: 'PostgreSQL'
  Note: 'TIME BLOCK Database Schema v1.0 - Django + PostgreSQL backend for TIME BLOCK app'
}

// ===== TABLES =====

Table users as U {
  id uuid [pk, note: '사용자 고유 ID']
  email varchar(255) [unique, not null, note: '이메일 (로그인 ID)']
  username varchar(100) [not null, note: '사용자 이름']
  password varchar(255) [null, note: '비밀번호 해시 (OAuth 전용은 NULL)']
  oauth_provider varchar(20) [null, note: 'OAuth 제공자 (google, kakao)']
  oauth_id varchar(255) [null, note: 'OAuth 고유 ID']
  profile_image varchar(500) [null, note: '프로필 이미지 URL']
  timezone varchar(50) [default: 'Asia/Seoul', note: '사용자 타임존']
  is_premium boolean [default: false, note: '프리미엄 회원 여부']
  premium_expires_at timestamp [null, note: '프리미엄 만료일']
  created_at timestamp [default: 'now()', note: '생성일시']
  updated_at timestamp [default: 'now()', note: '수정일시']

  indexes {
    email [unique, name: 'idx_user_email']
    (oauth_provider, oauth_id) [unique, name: 'idx_user_oauth', note: 'WHERE oauth_provider IS NOT NULL']
    (is_premium, premium_expires_at) [name: 'idx_user_premium']
  }

  Note: '회원 정보 및 OAuth 인증 관리. Constraints: email must be valid, oauth_provider: google/kakao/NULL, password NULL only if oauth_provider IS NOT NULL'
}

Table notification_preferences as NP {
  id uuid [pk, note: '설정 고유 ID']
  user_id uuid [ref: - U.id, unique, not null, note: '사용자 ID (1:1)']
  sound_enabled boolean [default: false, note: '소리 알림']
  screen_flash_enabled boolean [default: true, note: '화면 플래시']
  vibration_enabled boolean [default: true, note: '진동 알림']
  device_flash_enabled boolean [default: false, note: '카메라 플래시 (Premium)']
  flash_pattern jsonb [default: '{}', note: 'JSON: {duration, count, interval, color}']
  created_at timestamp [default: 'now()', note: '생성일시']
  updated_at timestamp [default: 'now()', note: '수정일시']

  indexes {
    user_id [unique, name: 'idx_notification_user']
  }

  Note: '사용자별 무음 알림 설정. flash_pattern JSON: duration, count, interval, color'
}

Table daily_plans as DP {
  id uuid [pk, note: '계획 고유 ID']
  user_id uuid [ref: > U.id, not null, note: '사용자 ID']
  date date [not null, note: '계획 날짜']
  priorities jsonb [default: '[]', note: 'JSON Array: 우선순위 3개']
  brain_dump text [null, note: 'Brain Dump 자유 메모']
  completion_rate decimal(5,2) [default: 0.00, note: '완료율 (0-100%)']
  created_at timestamp [default: 'now()', note: '생성일시']
  updated_at timestamp [default: 'now()', note: '수정일시']

  indexes {
    (user_id, date) [unique, name: 'idx_daily_plan_user_date']
    date [name: 'idx_daily_plan_date']
  }

  Note: '날짜별 다이어리 및 우선순위 관리. Constraints: UNIQUE(user_id, date), completion_rate 0-100. priorities JSON: array of 3 strings'
}

Table time_blocks as TB {
  id uuid [pk, note: '블록 고유 ID']
  daily_plan_id uuid [ref: > DP.id, not null, note: '일일 계획 ID']
  period varchar(2) [not null, note: '시간대 (am/pm)']
  hour integer [not null, note: '시간 (1-12)']
  title varchar(200) [null, note: '블록 제목']
  description text [null, note: '상세 설명']
  category varchar(50) [null, note: '카테고리 (study, work, rest 등)']
  planned_duration integer [default: 60, note: '계획 시간 (분)']
  actual_duration integer [default: 0, note: '실제 시간 (분)']
  is_completed boolean [default: false, note: '완료 여부']
  created_at timestamp [default: 'now()', note: '생성일시']
  updated_at timestamp [default: 'now()', note: '수정일시']

  indexes {
    (daily_plan_id, period, hour) [unique, name: 'idx_timeblock_plan_time']
    category [name: 'idx_timeblock_category']
    is_completed [name: 'idx_timeblock_completed']
  }

  Note: '시간대별 계획 블록 (4AM-12PM, 1PM-12AM). Constraints: UNIQUE(daily_plan_id, period, hour), period: am/pm, hour: 1-12, planned_duration > 0, actual_duration >= 0'
}

Table timer_sessions as TS {
  id uuid [pk, note: '세션 고유 ID']
  user_id uuid [ref: > U.id, not null, note: '사용자 ID']
  time_block_id uuid [ref: > TB.id, null, note: '연결된 시간 블록 (선택적)']
  scheduled_duration integer [not null, note: '설정 시간 (초)']
  elapsed_time integer [default: 0, note: '경과 시간 (초)']
  status varchar(20) [not null, note: 'running/paused/completed/cancelled']
  started_at timestamp [not null, note: '시작 시각']
  paused_at timestamp [null, note: '일시정지 시각']
  completed_at timestamp [null, note: '완료 시각']
  created_at timestamp [default: 'now()', note: '생성일시']
  updated_at timestamp [default: 'now()', note: '수정일시']

  indexes {
    (user_id, started_at) [name: 'idx_timer_user_date', note: 'For daily stats queries']
    time_block_id [name: 'idx_timer_block']
    status [name: 'idx_timer_status']
    completed_at [name: 'idx_timer_completed']
  }

  Note: '타이머 실행 기록 및 집중 시간 추적. Constraints: status: running/paused/completed/cancelled, scheduled_duration > 0, 0 <= elapsed_time <= scheduled_duration'
}

// ===== RELATIONSHIPS =====
// Already defined in table columns using inline 'ref' syntax:
// - NP.user_id - U.id (1:1, CASCADE)
// - DP.user_id > U.id (1:N, CASCADE)
// - TB.daily_plan_id > DP.id (1:N, CASCADE)
// - TS.user_id > U.id (1:N, CASCADE)
// - TS.time_block_id > TB.id (1:N, SET NULL)

// ===== ENUMS =====

Enum oauth_provider_enum {
  google
  kakao
}

Enum period_enum {
  am
  pm
}

Enum timer_status_enum {
  running
  paused
  completed
  cancelled
}

// ===== TABLE GROUPS =====

TableGroup Authentication {
  users
  notification_preferences
}

TableGroup Planning {
  daily_plans
  time_blocks
}

TableGroup Tracking {
  timer_sessions
}
